fix - gap image

--- a/client/src/components/NotFound/NotFound.module.css
+++ b/client/src/components/NotFound/NotFound.module.css
@@ -42,7 +42,8 @@
   cursor: pointer;
 }
 
-.logo:hover, .carImg:hover {
+.logo:hover,
+.carImg:hover {
   filter: drop-shadow(0 0 5px var(--accent-color));
 }
 
@@ -53,6 +54,10 @@ h2 {
 
 h4 {
   font-size: 1.3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
 }
 
 h2,
@@ -85,16 +90,12 @@ h4 {
     font-size: 50px;
   }
 
-  h4 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 6px;
-    font-size: 35px;
+  h4{
+    font-size: 40px;
   }
 
   h4>img {
-    width: 165px;
+    width: 170px;
   }
 
   .carImg {
